@@ -6,7 +6,7 @@
     <name>JMRI</name>
     <groupId>org.jmri</groupId>
     <artifactId>jmri</artifactId>
-    <version>5.7.7-SNAPSHOT</version>
+    <version>5.15.3-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <release.build_user>${user.name}</release.build_user>
@@ -26,9 +26,10 @@
         <jackson-databind.version>2.13.4.2</jackson-databind.version>
         <jackson-annotations.version>2.13.4</jackson-annotations.version>
         <jogamp.version>2.5.0</jogamp.version>
-        <openlcb.version>0.7.37</openlcb.version>
+        <openlcb.version>0.8.6</openlcb.version>
         <netbeans.version>RELEASE150</netbeans.version>
-        <jacoco.version>0.8.11</jacoco.version>
+        <spotbugs.version>4.9.8.2</spotbugs.version>
+        <jacoco.version>0.8.14</jacoco.version>
         <jacoco.reportDir>${basedir}/target/</jacoco.reportDir>
         <!-- test environment -->
         <jmri.path.program>${basedir}</jmri.path.program>
@@ -37,10 +38,10 @@
         <!-- don't load JInput during CI tests -->
         <jinput.useDefaultPlugin>false</jinput.useDefaultPlugin>
         <ant.version>1.10.11</ant.version>
-        <junit5.version>5.9.1</junit5.version>
-        <junit.platform.version>1.9.1</junit.platform.version>
+        <junit5.version>5.13.4</junit5.version>
+        <junit.platform.version>1.13.4</junit.platform.version>
         <ant.jvm.args></ant.jvm.args>
-        <argLine>-Xmx1536m -Duser.language=en -Duser.region=US -Dnashorn.args=--no-deprecation-warning</argLine>
+        <argLine>-Xmx1536m -Duser.language=en -Duser.region=US -Dnashorn.args=--no-deprecation-warning --add-exports java.desktop/sun.awt=ALL-UNNAMED -XX:+EnableDynamicAgentLoading</argLine>
         <!-- define argLines to allow running surefire:test -->
         <surefire.argLine></surefire.argLine>
         <failsafe.argLine></failsafe.argLine>
@@ -119,7 +120,7 @@
                     <plugin>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs-maven-plugin</artifactId>
-                        <version>4.7.3.0</version>
+                        <version>${spotbugs.version}</version>
                         <configuration>
                             <plugins>
                                 <plugin>
@@ -450,6 +451,9 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -477,7 +481,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.7.3.0</version>
+                <version>${spotbugs.version}</version>
                 <!-- configured to fail on medium priority bugs (needs to be done two places)-->
                 <configuration>
                     <plugins>
@@ -649,7 +653,7 @@
                     <!-- change from default 100 warnings; keep number synced with ant javadoc target -->
                     <additionalJOption>-breakiterator -Xmaxwarns 100</additionalJOption><!-- 100 is default, here so we can easily change it -->
                     <!-- remove ",-missing" to get warnings about missing Javadoc tags -->
-                    <doclint>all</doclint>
+                    <doclint>all,-missing</doclint>
                     <author>true</author><!-- default -->
                     <use>true</use><!-- default -->
                     <failOnError>true</failOnError><!-- default -->
@@ -711,19 +715,26 @@
                     </bottom>
                     <links>
                         <link>http://docs.oracle.com/en/java/javase/11/docs/api/</link>
-                        <link>http://java.sun.com/products/javacomm/reference/api/</link>
+                        <!-- Link below removed 2024/09/15 as failing Java21 static JavaDoc build, see https://github.com/JMRI/JMRI/pull/13454 -->
+                        <!-- <link>http://java.sun.com/products/javacomm/reference/api/</link> -->
                         <link>http://www.jdom.org/docs/apidocs/</link>
                         <link>https://commons.apache.org/proper/commons-csv/apidocs/</link>
-                        <link>https://static.javadoc.io/com.fasterxml.jackson.core/jackson-databind/${jackson-databind.version}/</link>
                         <link>http://logging.apache.org/log4j/1.2/apidocs/</link>
-                        <link>https://static.javadoc.io/org.openlcb/openlcb/${openlcb.version}/</link>
                         <link>https://commons.apache.org/proper/commons-lang/javadocs/api-release/</link>
-                        <link>https://javadoc.io/static/com.github.spotbugs/spotbugs-annotations/4.7.3/</link>
-                        <link>https://javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.1/</link>
-                        <!-- <link>https://jogamp.org/deployment/jogamp-next/javadoc/joal/javadoc/</link> -->
-                        <link>https://static.javadoc.io/com.github.purejavacomm/purejavacomm/1.0.1.RELEASE/</link>
-                        <link>https://static.javadoc.io/com.alexandriasoftware.swing/jsplitbutton/1.3.1/</link>
                         <link>https://fazecast.github.io/jSerialComm/javadoc</link>
+                        
+                        <!-- The following are commented out because they throw warnings with Java 17        -->
+                        <!-- yet we want real warnings to fail this check in CI.                             -->
+                        <!-- By commenting them out, we lose links to their Javadoc from ours. But since     -->
+                        <!-- our web production Javadocs are made with Ant, not Maven, this is not a problem -->
+                        <!-- <link>https://static.javadoc.io/com.fasterxml.jackson.core/jackson-databind/${jackson-databind.version}/</link> -->
+                        <!-- <link>https://static.javadoc.io/org.openlcb/openlcb/${openlcb.version}/</link> -->
+                        <!-- <link>https://javadoc.io/static/com.github.spotbugs/spotbugs-annotations/${spotbugs.version}/</link> -->
+                        <!-- <link>https://javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.1/</link> -->
+                        <!-- <link>https://static.javadoc.io/com.github.purejavacomm/purejavacomm/1.0.1.RELEASE/</link> -->
+                        <!-- <link>https://static.javadoc.io/com.alexandriasoftware.swing/jsplitbutton/1.3.1/</link> -->
+
+                        <!-- <link>https://jogamp.org/deployment/jogamp-next/javadoc/joal/javadoc/</link> -->
 
                     </links>
                 </configuration>
@@ -1173,7 +1184,7 @@
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom2</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.6.1</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
@@ -1225,7 +1236,7 @@
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit5</artifactId>
-            <version>1.0.0-rc1</version>
+            <version>1.4.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1273,7 +1284,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>4.2.2</version>
+            <version>6.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1377,7 +1388,7 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-            <version>2.7.2</version>
+            <version>2.7.4</version>
         </dependency>
         <!--
         <dependency>
@@ -1494,11 +1505,15 @@
             <!-- The next two lines force use of the local lib/openlcb.jar file. -->
             <!-- This is needed when we're using a custom openlcb.jar file -->
             <!-- not yet available on a maven repository. -->
-<!-- 
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/openlcb.jar</systemPath>
- -->
-
+            <!-- 
+                <scope>system</scope>
+                <systemPath>${project.basedir}/lib/openlcb.jar</systemPath>
+             -->
+        </dependency>
+        <dependency>
+            <groupId>com.github.weisj</groupId>
+            <artifactId>darklaf-core</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.usb4java</groupId>
@@ -1521,7 +1536,7 @@
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.7.3</version>
+            <version>4.9.8</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
@@ -1569,36 +1584,37 @@
         <dependency>
             <groupId>com.fazecast</groupId>
             <artifactId>jSerialComm</artifactId>
-            <version>2.10.4</version>
+            <version>2.11.4</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.5.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>3.5.11</version>
+            <version>5.20.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.5.11</version>
+            <version>5.20.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.10.14</version>
+            <version>1.18.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
-            <version>1.10.14</version>
+            <version>1.18.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.objenesis/objenesis -->
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>3.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1621,7 +1637,7 @@
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>json-schema-validator</artifactId>
-            <version>1.0.28</version>
+            <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.paho</groupId>
@@ -1692,65 +1708,63 @@
             </exclusions>
         </dependency>
 		<!-- //BiDiB client library -->
-		<!-- jbidibc 2.0.18 -->
+		<!-- jbidibc 2.0.40 -->
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-core</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.40</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-serial</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.40</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-simulation</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.40</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
-            <artifactId>jbidibc-purejavacomm</artifactId>
-            <version>2.0.18</version>
-            <exclusions>
-				<!-- don't use special purejavacomm mentioned in jbidibc-purejavacomm -->
-                <exclusion>
-                    <groupId>org.bidib.com.github.purejavacomm</groupId>
-                    <artifactId>purejavacomm</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>jbidibc-jserialcomm</artifactId>
+            <version>2.0.40</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-messages</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.40</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bidib.jbidib</groupId>
+            <artifactId>jbidibc-netbidib</artifactId>
+            <version>2.0.40</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-net-serial-over-tcp</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.40</version>
         </dependency>
-		<!-- BiDiB Wizard Simulation 2.0.18 -->
+		<!-- BiDiB Wizard Simulation 2.0.44 -->
        <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>bidibwizard-common</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.44</version>
         </dependency>
        <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>bidibwizard-model</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.44</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>bidibwizard-simulation</artifactId>
-            <version>2.0.18</version>
+            <version>2.0.44</version>
         </dependency>
         <!--  dependencies from jbidibc and bidibwizard -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
+            <version>4.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.bushe</groupId>
@@ -1788,6 +1802,11 @@
             <version>1.8.1</version>
         </dependency>
  		<!-- //BiDiB -->
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.10.2</version>
+      </dependency>
     </dependencies>
 
     <repositories>
@@ -1808,7 +1827,7 @@
         <repository>
             <id>jogamp-remote</id>
             <name>jogamp test mirror</name>
-            <url>https://www.jogamp.org/deployment/maven/</url>
+            <url>https://jogamp.org/deployment/maven/</url>
             <layout>default</layout>
         </repository>
         <!--
